<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="top|center|center_vertical"
	android:orientation="vertical">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/Crash_description"
		android:gravity="top"
		android:layout_margin="10dp"/>

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight="1.0"
		android:gravity="center|fill_vertical">

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/Show_Log"
			android:id="@+id/show"/>

		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/Copy_Log"
			android:id="@+id/copy"/>

		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/Send_Log"
			android:id="@+id/send"/>

		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/Restart_App"
			android:id="@+id/restart"/>

		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/otherButton"
			android:visibility="visible"
			android:text="@string/other"/>

		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/Close_App"
			android:id="@+id/close"/>

	</LinearLayout>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/Copyright_Information"
		android:gravity="center"
		android:layout_margin="10dp"/>

</LinearLayout>

